<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/state_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="6dp"
        android:textSize="20sp"
        tools:text="STATE" />

    <EditText
        android:id="@+id/account_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/state_text" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_input"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:text="Login" />

    <Button
        android:id="@+id/logout_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_action"
        android:text="Logout" />

    <Button
        android:id="@+id/register_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logout_action"
        android:text="Register" />

    <Button
        android:id="@+id/forget_password_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_action"
        android:text="ForgetPassword?" />

</RelativeLayout>