<resources>
    <string name="app_name">Test</string>
    <string name="app_label">TestActivity</string>

    <string name="action_search">SearchAction</string>
    <string name="search_hint">Search keyword</string>

    <string name="g_ok">確定</string>
    <string name="g_submit">確認</string>
    <string name="g_cancel">取消</string>
    <string name="g_loading">讀取中，請稍候</string>

    <string name="e_input_empty">請輸入%s</string>

    <string name="state_login_succeed">登入成功</string>
    <string name="state_login_failed">登入失敗</string>
    <string name="state_logout_succeed">登出成功</string>
    <string name="state_logout_failed">登出失敗</string>

    <string name="ask_logout">確定登出？</string>

    <string name="account">帳號</string>
    <string name="password">密碼</string>

    <string name="input_title">數量</string>
    <string name="input_content">請輸入數量</string>
    <string name="input_hint">請輸入...</string>
    <string name="input_pre_fill">Pre-fill</string>

    <!-- for gmall -->
    <string name="register_account">会员帐号</string>
    <string name="register_p_account">请输入会员帐号</string>
    <string name="register_email">电子邮箱账号</string>
    <string name="register_p_email">请输入电子邮箱账号</string>
    <string name="register_pwd">登录密码</string>
    <string name="register_p_pwd">请输入6-20位的登录密码</string>
    <string name="save_to_album">存到相簿</string>

    <string name="open_drawer">openDrawer</string>
    <string name="close_drawer">closeDrawer</string>

</resources>
